cmake_minimum_required (VERSION 3.5)

project (socket)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(SOCKET_SERVER_NAME socket_server)

#-------------------------------------------------------------------------------
# Flags
#-------------------------------------------------------------------------------
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11 -g")

#-------------------------------------------------------------------------------
# Include
#-------------------------------------------------------------------------------
include_directories(${CMAKE_MODULE_PATH})

#-------------------------------------------------------------------------------
# Exec
#-------------------------------------------------------------------------------
file(GLOB SOURCES "src/server.cpp")

add_executable(${SOCKET_SERVER_NAME} ${SOURCES})

target_link_libraries(${SOCKET_SERVER_NAME} ${LIBS})

#-------------------------------------------------------------------------------
# Tests
#-------------------------------------------------------------------------------
